--- a/images.qrc
+++ b/images.qrc
@@ -1,2 +1,6 @@
-<!DOCTYPE RCC>
-<RCC version="1.0"/>
+<RCC>
+    <qresource prefix="/images">
+        <file>cpu.png</file>
+        <file>ram.png</file>
+    </qresource>
+</RCC>
