added speed links stats for wifi

--- a/ltm.ui
+++ b/ltm.ui
@@ -308,7 +308,7 @@
                 <string notr="true">background-color: red;</string>
                </property>
                <property name="text">
-                <string> </string>
+                <string/>
                </property>
               </widget>
              </item>
@@ -382,6 +382,9 @@
                <property name="text">
                 <string>TextLabel</string>
                </property>
+               <property name="wordWrap">
+                <bool>true</bool>
+               </property>
               </widget>
              </item>
              <item row="0" column="0">
@@ -407,6 +410,9 @@
                </property>
                <property name="alignment">
                 <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
+               </property>
+               <property name="wordWrap">
+                <bool>true</bool>
                </property>
               </widget>
              </item>
@@ -485,6 +491,9 @@
                <property name="alignment">
                 <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
                </property>
+               <property name="wordWrap">
+                <bool>true</bool>
+               </property>
               </widget>
              </item>
              <item row="4" column="0">
@@ -508,6 +517,9 @@
                <property name="text">
                 <string>TextLabel</string>
                </property>
+               <property name="wordWrap">
+                <bool>true</bool>
+               </property>
               </widget>
              </item>
              <item row="5" column="0">
@@ -530,6 +542,9 @@
                </property>
                <property name="text">
                 <string>TextLabel</string>
+               </property>
+               <property name="wordWrap">
+                <bool>true</bool>
                </property>
               </widget>
              </item>
