--- a/ltm.ui
+++ b/ltm.ui
@@ -300,6 +300,12 @@
                <property name="alignment">
                 <set>Qt::AlignRight|Qt::AlignTop|Qt::AlignTrailing</set>
                </property>
+               <property name="margin">
+                <number>0</number>
+               </property>
+               <property name="indent">
+                <number>-1</number>
+               </property>
               </widget>
              </item>
              <item row="3" column="0">
